--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,10 @@
 server:
-  port: 8088
+  port: 8080
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/anime_db?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/book_main_management?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
     username: root
-    password: 123456
+    password: Clannad
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 
